<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/button_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/dialog_go_web"/>
        <Button
            android:id="@+id/button_google_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/dialog_show_google_map"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_airport_name"
            android:id="@+id/textView"
            android:layout_column="1" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name_eng"
            android:layout_column="2"
            android:hint="@string/dialog_hint_airport_name" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_name_airport_rus"
            android:id="@+id/textView5"
            android:layout_column="1" />

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name_rus"
            android:layout_column="2"
            android:hint="@string/dialog_hint_airport_name_rus" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_city_name"
            android:id="@+id/textView2"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_city_eng"
            android:layout_column="2"
            android:hint="@string/dialog_hint_city_name" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_city_name_rus"
            android:id="@+id/textView6"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_city_rus"
            android:layout_column="2"
            android:hint="@string/dialog_hint_city_name_rus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_country_name"
            android:id="@+id/textView3"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_country_eng"
            android:layout_column="2"
            android:hint="@string/dialog_hint_country_name" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_country_name_rus"
            android:id="@+id/textView7"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_country_rus"
            android:layout_column="2"
            android:hint="@string/dialog_hint_country_name_rus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_county_code"
            android:id="@+id/textView4"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_iso_code"
            android:layout_column="2"
            android:hint="@string/dialog_hint_county_code" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_gmt_offset"
            android:id="@+id/textView8"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/edit_gmt_offset"
            android:layout_column="2"
            android:hint="@string/dialog_hint_gmt_offset" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_iata_code"
            android:id="@+id/textView9"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_iata_code"
            android:layout_column="2"
            android:hint="@string/dialog_hint_iata_code" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_icao_code"
            android:id="@+id/textView10"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_icao_code"
            android:layout_column="2"
            android:hint="@string/dialog_hint_icao_code" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_latitude"
            android:id="@+id/textView11"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/edit_latitude"
            android:layout_column="2"
            android:hint="@string/dialog_hint_latitude" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_longitude"
            android:id="@+id/textView12"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/edit_longtitude"
            android:layout_column="2"
            android:hint="@string/dialog_hint_longitude" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text_web"
            android:id="@+id/textView13"
            android:layout_column="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_website"
            android:layout_column="2"
            android:hint="@string/dialog_hint_web" />

    </TableRow>

</TableLayout>
</ScrollView>