<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/google_map_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/google_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/google_map_toolbar"
            layout="@layout/toolbar"/>
    </fragment>

    <!-- The navigation drawer -->

    <ScrollView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:orientation="vertical"
        android:background="#80158dd0">

        <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <Button
                android:id="@+id/button_map_type_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_type_normal"/>
            <Button
                android:id="@+id/button_map_type_satellite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_type_satellite"/>
            <Button
                android:id="@+id/button_map_type_hybrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_type_hybrid"/>
            <Button
                android:id="@+id/button_map_type_terrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_type_terrain"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FF158dd0" />
            <Button
                android:id="@+id/button_map_show_nearest_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_show_nearest_airports"/>
            <Button
                android:id="@+id/button_map_show_my_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_show_my_location"/>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>


